# mcarfromsolpg

./: .env  IMPROVEMENTS.md  PRODUCTS_REQUIREMENTS.md  idl.json  program-keypair.json  report.md  self-cpi.md
mcar-vesting/: .env  .gitignore  Anchor.toml  PRODUCTS_REQUIREMENTS.md  package-lock.json  package.json
mcar-vesting/keys/: deployer.json
mcar-vesting/programs/mcar-vesting/: Cargo.toml
mcar-vesting/programs/mcar-vesting/src/: lib.rs
mcar-vesting/tests/: mcar-vesting.ts  stress-test.ts
test-ledger/: faucet-keypair.json
