[package]
name = "mcar-vesting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mcar_vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []
# clockwork = ["clockwork-sdk"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.18"
spl-token-2022 = { version = "0.6.0", features = ["no-entrypoint"] }
# clockwork-sdk = { version = "2.0.19", optional = true }
